# SPDX-License-Identifier: GPL-2.0-or-later

noinst_LIBRARIES = libsidtune.a

AM_CXXFLAGS = $(WARNINGCXXFLAGS)

libsidtune_a_SOURCES = IconInfo.cpp \
InfoFile.cpp \
MUS.cpp \
p00.cpp \
PP20.cpp \
PP20.h \
PP20_Defs.h \
prg.cpp \
PSID.cpp \
SidTune.cpp \
SidTuneCfg.h \
SidTuneTools.cpp \
SidTuneTools.h
